# ai-research-assistant

./: .gitignore  .prettierignore  README.md  docker-compose.yaml  eslint.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  update-template.json  update-template.rdf  update.json  update.rdf  zotero-plugin.config.ts
addon/: bootstrap.js  install.rdf  manifest.json  prefs.js
docs/: configuration.md  update.md
legacyScripts/: build.mjs  server.mjs  wasm.js
libs/vector_search/: Cargo.toml  README.md
libs/vector_search/src/: lib.rs
patches/: @anthropic-ai+sdk+0.5.10.patch  @anthropic-ai+sdk+0.6.2.patch  @anthropic-ai+sdk+0.9.1.patch  @langchain+core++ansi-styles+5.2.0.patch  @langchain+core++camelcase+6.3.0.patch  @langchain+core+0.0.8.patch  @langchain+core+0.1.17.patch  @langchain+core+0.1.28.patch  @langchain+core+0.1.54.patch  @langchain+core+0.1.63.patch  @langchain+openai+0.0.12.patch  @langchain+openai+0.0.26.patch  @langchain+openai+0.0.27.patch  @langchain+openai+0.0.34.patch  camelcase+6.3.0.patch  camelcase+7.0.1.patch  decamelize+5.0.1.patch  formdata-node+4.4.1.patch  langchain++ansi-styles+5.2.0.patch  langchain++camelcase+6.3.0.patch  langchain++yaml+2.2.1.patch  langchain+0.0.127.patch  langchain+0.0.181.patch  langchain+0.0.183.patch  langchain+0.0.201.patch  langchain+0.0.48.patch  langchain+0.0.53.patch  langchain+0.0.57.patch  langchain+0.0.67.patch  langchain+0.0.96.patch  langsmith+0.0.33.patch  langsmith+0.0.48.patch  langsmith+0.0.59.patch  langsmith+0.0.70.patch  langsmith+0.1.14.patch  langsmith+0.1.66.patch  (+19 more)
(+270 files in other folders)
