[package]
name = "vector_search"
authors = ["Fan Li <fan.li@apex974.com>"]
description = "Vector similarity search in WASM, compatible with WebAssembly MVP"
version = "0.1.0"
edition = "2018"
keywords = ["rust", "webassembly", "wasm", "rust", "hnsw", "vector search", "embeddings"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console"]
console = ["console_error_panic_hook", "console_log", "fern"]

[dependencies]
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }
console_log = { version = "1.0.0", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
fern = { version = "0.6.0", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.69"
kd-tree = { version = "0.5.1", features = ["serde"] }
typenum = "1.16.0"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0.93"
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.61"
serde_derive = "1.0.116"
log = { version = "0.4.14", features = ["release_max_level_warn"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"